syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.tnmk.practice.springgrpc.protobuf";

service DownloadFileGrpcService {
    rpc downloadFile (DownloadFileRequestProto) returns (DownloadFileResponseProto);
}

message DownloadFileRequestProto {
    string fileName = 1;
}

message DownloadFileResponseProto {
    bytes data = 1;
}